--- a/app/src/main/res/layout/manolo_item.xml
+++ b/app/src/main/res/layout/manolo_item.xml
@@ -4,11 +4,10 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
         android:src="@drawable/ic_launcher"
         android:id="@+id/imageView"
-
         />
 
     <TextView
